$Id: NEWS,v 1.144 2001-12-17 17:58:29 flood Exp $

1.2.5rc1 - CVS
---------------------------------
- New mod_sql (4.07)
- New mod_wrap (1.2.2)
- New mod_ldap (2.8.1)
- Bug 1113 - Make.rules for HPUX incorrectly generated
- Bug 1334 - (should have been in 1.2.4, but was missed somehow)
             MaxClients none in VirtualHost forbids connect
- Bug 1368 - umask bug is hopefully squashed for good
- Bug 1389 - fixed hang on PWD
- Bug 1355 - Added POST_CMD_ERR handler to API
- Bug 1396 - DenyFilter works only in server config scope
- Bug 1410 - SIGIO now conditionally compiled
- Bug 1281 - Improper checking of server context
- Bug 1364 - Immediate chown() after file creation
- Bug 1415 - Change allowed contexts for Include
- Bug 1430 - Possible bad handling of Directory contexts
- Bug 1426 - sigsegv on `ls ///////////'
- Bug 1360 - Add getgroups abstraction for auth modules
- Bug 1289 - Increase information passed to timer callbacks
- Bug 1341 - Bad tracking of forked processes
- Bug 1400 - Improper use of MODRET_HASDATA macro
- Bug 1416 - PidFile in <Global> context is unnecessary, even wasteful
- Bug 1429 - Trivial fixes to dispatch reporting
- Bug 1419 - Remove unnecessary colons from PRIVS_ macros
- Bug 1418 - Slight change to exithandler handling to allow module
             finalization slot

1.2.4 - Released 10/19/2001
---------------------------------
Ooops.  1.2.3 was released with a bug that breaks Umask on
certain platforms.  This results in files being mode 0.
- Bug 1348 - Fix for mode 0 problem

1.2.3 - Released 10/18/2001
---------------------------------
PASS argument now intentionally hidden in the proctitle.
- Bug 1242 - More verbose logging of regex evaluations
- Bug 1343 - Better reporting of command dispatching
- Bug 1335 - Documentation patch
- Bug 1334 - MaxClients none in <VirtualHost> now works
- Bug 1344 - QUIT now properly logged.
- Bug 1247 - Allow/Deny now bahave as in <1.2.2 (multiple lines work)